--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "effector-slots",
+  "name": "effector-react-slots",
   "version": "0.0.1",
   "description": "Slots factory",
   "type": "module",
