--- a/package.json
+++ b/package.json
@@ -45,23 +45,23 @@
   "devDependencies": {
     "@arkweid/lefthook": "0.7",
     "@size-limit/preset-small-lib": "5",
-    "@testing-library/react": "^12.1.0",
-    "@types/jest": "^27.0.1",
+    "@testing-library/react": "12",
+    "@types/jest": "27",
     "@types/react": "17",
-    "@types/react-dom": "^17.0.9",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@types/testing-library__jest-dom": "^5.14.1",
-    "@types/testing-library__react": "^10.2.0",
+    "@types/react-dom": "17",
+    "@testing-library/jest-dom": "5",
+    "@types/testing-library__jest-dom": "5",
+    "@types/testing-library__react": "10",
     "clean-publish": "2",
     "effector": "22.1.1",
-    "effector-react": "22.0.4",
-    "jest": "^27.2.0",
+    "effector-react": "22",
+    "jest": "27",
     "microbundle": "0.13.3",
     "prettier": "2",
     "react": "17",
-    "react-dom": "^17.0.2",
+    "react-dom": "17",
     "size-limit": "5",
-    "ts-jest": "^27.0.5",
+    "ts-jest": "27",
     "typescript": "4.4.3"
   },
   "peerDependencies": {
