--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@space307/effector-react-slots",
+  "name": "effector-react-slots",
   "version": "1.1.6",
   "description": "Effector library for slots implementation in React",
   "type": "module",
