--- a/package.json
+++ b/package.json
@@ -55,16 +55,16 @@
     "effector": "22",
     "effector-react": "22",
     "jest": "27",
-    "microbundle": "0.14.1",
+    "microbundle": "0.14.2",
     "prettier": "2",
     "react": "17",
     "react-dom": "17",
     "ts-jest": "27",
-    "typescript": "4.4.4"
+    "typescript": "4.5.2"
   },
   "peerDependencies": {
-    "effector": ">= 21.8.0",
-    "effector-react": ">= 21.3.0",
-    "react": ">= 16.8"
+    "effector": ">= 21.8.0 <23",
+    "effector-react": ">= 21.3.0 <23",
+    "react": ">= 16.8 <18"
   }
 }
