--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "parcel build --no-source-maps --no-cache --detailed-report",
     "doc:update-readme": "npx doctoc README.md",
     "prettier:check": "prettier --check 'src/**/*.{ts,tsx}'",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "npm t && npm run build",
     "prettier:fix": "prettier --write 'src/**/*.{ts,tsx}'",
     "test": "jest --maxWorkers=50% --no-cache --no-watchman"
   },
@@ -45,21 +45,18 @@
   ],
   "devDependencies": {
     "@arkweid/lefthook": "0.7",
-    "@parcel/packager-ts": "^2.0.1",
-    "@parcel/transformer-typescript-types": "^2.0.1",
-    "@testing-library/jest-dom": "5",
+    "@parcel/packager-ts": "2",
+    "@parcel/transformer-typescript-types": "2",
     "@testing-library/react": "12",
     "@types/jest": "27",
     "@types/react": "17",
-    "@types/react-dom": "17",
     "doctoc": "2",
     "effector": "22",
     "effector-react": "22",
     "jest": "27",
-    "parcel": "^2.0.1",
+    "parcel": "2",
     "prettier": "2",
     "react": "17",
-    "react-dom": "17",
     "ts-jest": "27",
     "typescript": "4.5.2"
   },
