--- a/package.json
+++ b/package.json
@@ -47,17 +47,18 @@
     "@arkweid/lefthook": "0.7",
     "@parcel/packager-ts": "2",
     "@parcel/transformer-typescript-types": "2",
+    "@swc/core": "^1.2.117",
+    "@swc/jest": "^0.2.11",
     "@testing-library/react": "12",
     "@types/jest": "27",
     "@types/react": "17",
     "doctoc": "2",
     "effector": "22",
     "effector-react": "22",
-    "jest": "27",
+    "jest": "^27.4.3",
     "parcel": "2",
     "prettier": "2",
     "react": "17",
-    "ts-jest": "27",
     "typescript": "4.5.2"
   },
   "peerDependencies": {
@@ -66,11 +67,11 @@
     "react": ">= 16.8 <18"
   },
   "dependencies": {
-    "tslib": "^2.3.1"
+    "tslib": "2"
   },
   "targets": {
     "main": {
-		  "optimize": true
-	  }
+      "optimize": true
+    }
   }
 }
