--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,21 +10,27 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: 'node:lts-alpine3.12'
+      image: 'node:lts-buster'
 
     steps:
       - name: Checkouut
         uses: actions/checkout@v2
 
-      - uses: actions/cache@v2
+      - name: Cache pnpm modules
+        uses: actions/cache@v2
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-node-
-            
+            ${{ runner.os }}-
+
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6.0.2
+          run_install: true
+
       - name: Install
-        run: npm ci --silent --audit=false
+        run: pnpm ci --silent --audit=false
 
       - name: Build and test
-        run: npm run build & npm t && wait;
+        run: pnpm run build & pnpm t && wait;
