--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "build": "parcel build --no-source-maps --no-cache --detailed-report",
     "doc:update-readme": "npx doctoc README.md",
     "prettier:check": "prettier --check 'src/**/*.{ts,tsx}'",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "pnpm run build",
     "prettier:fix": "prettier --write 'src/**/*.{ts,tsx}'",
-    "test": "jest --maxWorkers=50% --no-cache --no-watchman"
+    "test": "jest --runInBand --no-cache --no-watchman"
   },
   "license": "MIT",
   "bugs": {
@@ -45,8 +45,10 @@
   ],
   "devDependencies": {
     "@arkweid/lefthook": "0.7",
-    "@parcel/packager-ts": "^2.0.1",
-    "@parcel/transformer-typescript-types": "^2.0.1",
+    "@parcel/packager-ts": "2",
+    "@parcel/transformer-typescript-types": "2",
+    "@swc/core": "1.2.124",
+    "@swc/jest": "0.2.15",
     "@testing-library/jest-dom": "5",
     "@testing-library/react": "12",
     "@types/jest": "27",
@@ -56,12 +58,11 @@
     "effector": "22",
     "effector-react": "22",
     "jest": "27",
-    "parcel": "^2.0.1",
+    "parcel": "2",
     "prettier": "2",
     "react": "17",
     "react-dom": "17",
-    "ts-jest": "27",
-    "typescript": "4.5.2"
+    "typescript": "4.5.4"
   },
   "peerDependencies": {
     "effector": ">= 21.8.0 <23",
@@ -73,7 +74,7 @@
   },
   "targets": {
     "main": {
-		  "optimize": true
-	  }
+      "optimize": true
+    }
   }
 }
