maintain: work with deps

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   ],
   "scripts": {
     "build": "parcel build --no-source-maps --no-cache --detailed-report",
-    "doc:update-readme": "npx doctoc README.md",
     "prettier:check": "prettier --check 'src/**/*.{ts,tsx}'",
     "prepublishOnly": "pnpm run build",
     "prettier:fix": "prettier --write 'src/**/*.{ts,tsx}'",
@@ -47,14 +46,12 @@
     "@arkweid/lefthook": "0.7",
     "@parcel/packager-ts": "2",
     "@parcel/transformer-typescript-types": "2",
-    "@swc/core": "1.2.124",
-    "@swc/jest": "0.2.15",
+    "@sucrase/jest-plugin": "2",
     "@testing-library/jest-dom": "5",
     "@testing-library/react": "12",
     "@types/jest": "27",
     "@types/react": "17",
     "@types/react-dom": "17",
-    "doctoc": "2",
     "effector": "22",
     "effector-react": "22",
     "jest": "27",
