--- a/package.json
+++ b/package.json
@@ -43,22 +43,22 @@
     "slots"
   ],
   "devDependencies": {
-    "@arkweid/lefthook": "0.7",
-    "@parcel/packager-ts": "2",
-    "@parcel/transformer-typescript-types": "2",
-    "@sucrase/jest-plugin": "2",
-    "@testing-library/jest-dom": "5",
-    "@testing-library/react": "12",
-    "@types/jest": "27",
-    "@types/react": "17",
-    "@types/react-dom": "17",
-    "effector": "22",
-    "effector-react": "22",
-    "jest": "27",
-    "parcel": "2",
-    "prettier": "2",
-    "react": "17",
-    "react-dom": "17",
+    "@arkweid/lefthook": "~0.7.7",
+    "@parcel/packager-ts": "^2.2.0",
+    "@parcel/transformer-typescript-types": "^2.2.0",
+    "@sucrase/jest-plugin": "^2.2.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.4.0",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "effector": "^22.1.2",
+    "effector-react": "^22.0.6",
+    "jest": "^27.4.7",
+    "parcel": "^2.2.0",
+    "prettier": "^2.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "4.5.4"
   },
   "peerDependencies": {
