--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "scripts": {
     "build": "parcel build --no-source-maps --no-cache --detailed-report",
+    "preinstall": "npx only-allow pnpm",
     "prettier:check": "prettier --check 'src/**/*.{ts,tsx}'",
     "prepublishOnly": "pnpm run build",
     "prettier:fix": "prettier --write 'src/**/*.{ts,tsx}'",
@@ -44,8 +45,6 @@
   ],
   "devDependencies": {
     "@arkweid/lefthook": "~0.7.7",
-    "@parcel/packager-ts": "^2.2.0",
-    "@parcel/transformer-typescript-types": "^2.2.0",
     "@sucrase/jest-plugin": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
