--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "effector-react-slots",
-  "version": "2.3.0",
+  "version": "2.4.0-next.0",
   "description": "Effector library for slots implementation in React",
   "type": "module",
   "source": "src/index.tsx",
