--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "build": "parcel build --no-source-maps --no-cache --detailed-report",
     "prettier:check": "prettier --check 'src/**/*.{ts,tsx}'",
-    "prepublishOnly": "pnpm run build",
+    "prepublishOnly": "npm run build",
     "prettier:fix": "prettier --write 'src/**/*.{ts,tsx}'",
     "test": "jest --runInBand --no-cache --no-watchman"
   },
