--- a/package.json
+++ b/package.json
@@ -44,19 +44,21 @@
   ],
   "devDependencies": {
     "@arkweid/lefthook": "~0.7.7",
+    "@parcel/packager-ts": "^2.7.0",
+    "@parcel/transformer-typescript-types": "^2.7.0",
     "@sucrase/jest-plugin": "^2.2.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "12",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "effector": "^22.1.2",
     "effector-react": "^22.0.6",
-    "jest": "^27.4.7",
-    "parcel": "^2.2.0",
+    "jest": "28.1.3",
+    "parcel": "2.7.0",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "4.5.4"
+    "typescript": "4.7.4"
   },
   "peerDependencies": {
     "effector": ">= 21.8.0 <23",
@@ -64,6 +66,7 @@
     "react": ">= 16.8 <19.0.0"
   },
   "dependencies": {
+    "jest-environment-jsdom": "^28.1.3",
     "tslib": "^2.3.1"
   },
   "targets": {
