--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "effector-react-slots",
-  "version": "2.4.0-next.1",
+  "version": "2.3.0",
   "description": "Effector library for slots implementation in React",
   "type": "module",
   "source": "src/index.tsx",
@@ -8,9 +8,7 @@
   "module": "dist/module.js",
   "types": "dist/types.d.ts",
   "private": false,
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/space307/effector-react-slots.git"
@@ -37,37 +35,31 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
-  "keywords": [
-    "effector",
-    "react",
-    "slots"
-  ],
+  "keywords": ["effector", "react", "slots"],
   "devDependencies": {
     "@arkweid/lefthook": "~0.7.7",
-    "@parcel/packager-ts": "^2.7.0",
-    "@parcel/transformer-typescript-types": "^2.7.0",
-    "@sucrase/jest-plugin": "^2.2.0",
+    "@parcel/packager-ts": "2.8.3",
+    "@parcel/transformer-typescript-types": "2.8.3",
+    "@sucrase/jest-plugin": "3.0.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "effector": "^22.1.2",
     "effector-react": "^22.0.6",
-    "jest": "28.1.3",
-    "parcel": "2.7.0",
-    "prettier": "^2.5.1",
+    "jest": "29.4.2",
+    "parcel": "2.8.3",
+    "prettier": "2.8.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "4.7.4"
+    "typescript": "4.9.5",
+    "jest-environment-jsdom": "29.4.2",
+    "tslib": "2.5.0"
   },
   "peerDependencies": {
     "effector": ">= 21.8.0 <23",
     "effector-react": ">= 21.3.0 <23",
     "react": ">= 16.8 <19.0.0"
-  },
-  "dependencies": {
-    "jest-environment-jsdom": "^28.1.3",
-    "tslib": "^2.3.1"
   },
   "targets": {
     "main": {
